# thermostat

thermostat/: CMakeLists.txt  Main.qml  main.cpp
thermostat/UI/HomeScreen/: HomeScreen.qml  TemperatureControlSlider.qml
thermostat/UI/SettingsScreen/: SettingsScreen.qml
